<resources>
    <string name="app_name">Android RoomDb App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">ADD USER</string>
    <string name="view_user">VIEW USER</string>
    <string name="delete_user">DELETE USER</string>
    <string name="update_user">UPDATE USER</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="add_user_here">ADD USER HERE</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_email_address">enter User Email Address</string>
    <string name="save">SAVE</string>
    <string name="user_information">User Information</string>
    <string name="user_id">User Id</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="user_id_displayText">User ID:</string>
    <string name="user_name_displayText">User Name:</string>
    <string name="user_email_displayText">User Email:</string>
    <string name="name">Name:</string>
    <string name="email_display">Email:</string>
    <string name="id_test">ID</string>
    <string name="name_test">Name</string>
    <string name="email_test">Email</string>
    <string name="enter_userid_to_delete">Enter userID To delete</string>
    <string name="delete_user_from_here">DELETE USER FROM HERE</string>
    <string name="delete">DELETE</string>
</resources>
